<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/FirstFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/StatisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/menu_statistics" />
    <item
        android:id="@+id/placeholder"
        android:title=""
        android:enabled="false" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>